--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -17,7 +17,7 @@
         <%= link_to "Edit", edit_user_registration_path, class: 'btn-orange' %>
 
       <% else %>
-        <%= link_to 'Chat', user_path(@user), class: 'btn-orange'%>
+        <%= button_to 'Chat', user_conversations_path(params[:id]), method: :post, class: 'btn-orange' %>
         <%= link_to "Add Review", new_user_review_path(params[:id]), class: 'btn-orange' %>
       <% end %>
     </div>
