--- a/app/views/concerts/show.html.erb
+++ b/app/views/concerts/show.html.erb
@@ -1,71 +1,70 @@
-<div class="show-container">
-  <div class="card-category" style="background-image: url(<%= @concert.photo %>)">
+<div class="show-container" data-controller="change-grid">
+  <div class="show-container">
+    <div class="card-category" style="background-image: url(<%= @concert.photo %>)">
 
-  </div>
-
-
-
-<!-- Modal -->
-  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="card-grid_column card-grid-modal user-card-container">
-          <%  @attendees.each do |attendee| %>
-            <div class="attendee-card">
-              <div class="card-content">
-                <% photo = attendee.user.photo ? attendee.user.photo : "https://thumbs.dreamstime.com/b/default-avatar-profile-trendy-style-social-media-user-icon-187599373.jpg" %>
-                <%= image_tag photo, class: 'avatar-sm'  %>
-                <%= link_to user_path(attendee.user.id) do %>
-                  <p class="card-fullname"><%= attendee.user.username %></p>
-                <% end %>
+    </div>
+  <!-- Modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="card-grid_column card-grid-modal user-card-container" data-change-grid-target="grid" >
+            <%  @attendees.each do |attendee| %>
+              <div class="attendee-card">
+                <div class="card-content">
+                  <% photo = attendee.user.photo ? attendee.user.photo : "https://thumbs.dreamstime.com/b/default-avatar-profile-trendy-style-social-media-user-icon-187599373.jpg" %>
+                  <%= image_tag photo, class: 'avatar-sm'  %>
+                  <%= link_to user_path(attendee.user.id) do %>
+                    <p class="card-fullname"><%= attendee.user.username %></p>
+                  <% end %>
+                </div>
               </div>
-            </div>
-          <% end %>
+            <% end %>
+          </div>
         </div>
       </div>
     </div>
-  </div>
 
-    <div class="concert-details">
-      <div class="concert-details-title">
-        <h1><%= @concert.artist %></h1>
-        <p><i class="fa-solid fa-star"></i> (5.0)</p>
+      <div class="concert-details">
+        <div class="concert-details-title">
+          <h1><%= @concert.artist %></h1>
+          <p><i class="fa-solid fa-star"></i> (5.0)</p>
+        </div>
+        <div class="concert-details-list">
+          <ul class="list-no-style">
+            <li><p><i class="fa-solid fa-calendar"></i> <%= @concert.date %></p></li>
+            <li><p><i class="fa-solid fa-location-crosshairs"></i> <%= @concert.venue %></p></li>
+            <li><p><i class="fa-solid fa-location-dot"></i> <%= @concert.address %></p></li>
+          </ul>
+        </div>
+        <div class="concert-details-bio">
+          <h3>Description</h3>
+          <p><%= @concert.description %> "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+        </div>
       </div>
-      <div class="concert-details-list">
-        <ul class="list-no-style">
-          <li><p><i class="fa-solid fa-calendar"></i> <%= @concert.date %></p></li>
-          <li><p><i class="fa-solid fa-location-crosshairs"></i> <%= @concert.venue %></p></li>
-          <li><p><i class="fa-solid fa-location-dot"></i> <%= @concert.address %></p></li>
-        </ul>
+      <div class="container-map">
+        <%# <img src="https://www.google.com/maps/d/thumbnail?mid=17x3faiz9oX3SJDpBJPjO-zu6jUQ" alt=""> %>
+        <div style="width: 100%; height: 200px;"
+            data-controller="mapbox"
+            data-mapbox-markers-value="<%= @markers.to_json %>"
+            data-mapbox-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
+        </div>
       </div>
-      <div class="concert-details-bio">
-        <h3>Description</h3>
-        <p><%= @concert.description %> "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
-      </div>
-    </div>
-    <div class="container-map">
-      <%# <img src="https://www.google.com/maps/d/thumbnail?mid=17x3faiz9oX3SJDpBJPjO-zu6jUQ" alt=""> %>
-      <div style="width: 100%; height: 200px;"
-          data-controller="mapbox"
-          data-mapbox-markers-value="<%= @markers.to_json %>"
-          data-mapbox-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
-      </div>
-    </div>
 
-  </div>
-    <div class="footer-map">
-      <div class="footer_content">
-        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-          <p><%= @attendees.count %> attending</p>
-        </button>
-        <% if current_user == nil %>
-          <button class="btn-orange "><%= button_to 'Join now', new_user_session_path, class:"joinBtn" %></button>
-        <% elsif @usersconcert.attending?(@concert, current_user) %>
-          <button class="btn-orange"><%= link_to 'CHAT', chatroom_path(@concert.chatroom) %></button>
-        <% else %>
-          <button class="btn-orange "><%= button_to 'Join now', concert_users_concerts_path(@concert), class:"joinBtn" %></button>
-        <% end %>
-      </div>
+    </div>
+      <div class="footer-map">
+        <div class="footer_content">
+          <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+            <p><span data-change-grid-target="count"><%= @attendees.count %></span> attending</p>
+          </button>
+          <% if current_user == nil %>
+            <button class="btn-orange "><%= button_to 'Join now', new_user_session_path, class:"joinBtn" %></button>
+          <% elsif @usersconcert.attending?(@concert, current_user) %>
+            <button class="btn-orange"><%= link_to 'CHAT', chatroom_path(@concert.chatroom) %></button>
+          <% else %>
+            <button class="btn-orange "><%= button_to 'Join now', concert_users_concerts_path(@concert), class:"joinBtn" %></button>
+          <% end %>
+        </div>
+    </div>
   </div>
 </div>
 
