--- a/app/views/concerts/_info_window.html.erb
+++ b/app/views/concerts/_info_window.html.erb
@@ -1,4 +1,10 @@
-<div class="card__background">
-  <h3 class="card__heading" style="color:black"><%= link_to concert.artist, concert_path(concert) %></h3>
-  <h3 class="card__heading"><%= concert.date %></h3>
+<%# <div class="pop_up_map_card d-flex p-4 align-items-center justify-content-between"> %>
+  <%# <div>
+    <%= image_tag concert.photo, alt: "concert img", class:'map_concert_img' %>
+  <%# </div>  %>
+<div class="pb-6" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)),url(<%= concert.photo %>);background-size: cover;">
+    <h3 class="map_card_details"><%= link_to concert.artist, concert_path(concert), class:'map_card_link' %></h3>
+    <h3 class="map_card_details"><%= concert.date %></h3>
+    <h3 class="map_card_details"><%= concert.genre %></h3>
+
 </div>
