--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,5 +1,14 @@
-<%= simple_form_for [@reviewed_user, @review] do |f| %>
-      <%= f.input :rating, collection: 1..5 %>
-      <%= f.input :content %>
-      <%= f.button :submit, class: "btn-orange-sm" %>
-    <% end %>
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-12 col-sm-4">
+      <div class="form-login">
+      <h2>Add Review:</h2>
+        <%= simple_form_for [@reviewed_user, @review] do |f| %>
+          <%= f.input :rating, collection: 1..5 %>
+          <%= f.input :content %>
+          <%= f.button :submit, class: "btn-orange-sm w-100" %>
+        <% end %>
+      </div>
+   </div>
+  </div>
+</div>
