--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,7 +9,7 @@
 </div> %>
 <div class="container margin-bottom">
   <div class="d-flex justify-content-between flex-column align-items-center">
-    <h1 class="my-3 w-75"> <strong>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit</strong></h1>
+    <h1 class="my-3 w-75"> <strong>Find your new friends.</strong></h1>
     <%# <div class="searchInputAndIcon"> %>
     <%# </div> %>
   </div>
@@ -44,7 +44,7 @@
 </div>
 <div class="footer-map">
     <div class="footer_content">
-    <p>SOME TEXT</p>
+    <p></p>
     <%= link_to "MAP", map_path , class:"btn-orange"%>
     <%# <button class="btn-orange">MAP</button> %>
     </div>
