--- a/app/views/concerts/show.html.erb
+++ b/app/views/concerts/show.html.erb
@@ -58,7 +58,7 @@
         </button>
         <% if current_user == nil %>
           <button class="btn-orange "><%= button_to 'Join now', new_user_session_path, class:"joinBtn" %></button>
-        <% elsif UsersConcert.where("user_id = ?, concert_id = ?", current_user.id, @concert.id) %>
+        <% elsif UsersConcert.find_by(user_id: current_user.id, concert_id: @concert.id) %>
           <button class="btn-orange"><%= link_to 'CHAT', chatroom_path(@concert.chatroom) %></button>
         <% else %>
           <button class="btn-orange "><%= button_to 'Join now', concert_users_concerts_path(@concert), class:"joinBtn" %></button>
