--- a/app/views/concerts/index.html.erb
+++ b/app/views/concerts/index.html.erb
@@ -131,8 +131,8 @@
   <div class="container mb-3">
     <h3>Browse categories</h3>
   </div>
-  <%= render "tabs", concerts: @concerts %>
-  <%= render "list", concerts: @concerts %>
+  <%# <%= render "tabs", concerts: @concerts %>
+  <%# <%= render "list", concerts: @concerts %>
 </div>
 
 <div class="footer-map">
