web responsive, add 3 card value at the bottom and animation to the title

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -51,31 +51,24 @@ $br-radius: 2em;
   height: 18em;
   position: relative;
   border-radius: $br-radius;
+  background-size: cover;
+  background-position: center;
+  box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 2px 0px;
   a {
     text-decoration: none;
   }
   flex: 0 0 auto;
+}
 
+@media only screen and (min-width: 768px) {
+  /* For mobile phones: */
+  .card {
+    width: 30%;
+    height: 20em;
+  }
 }
 
 
-.card__background{
-  background-size: cover;
-  background-position: center;
-  border-radius: var(--spacing-l);
-  width: 100%;
-  bottom: 0;
-  left: 0;
-  position: relative;
-  right: 0;
-  top: 0;
-  transform-origin: center;
-  transform: scale(1) translateZ(0);
-  transition:
-    filter 200ms linear,
-    transform 200ms linear;
-    border-radius: $br-radius;
-}
 
 .card__content{
   left: 0;
@@ -143,3 +136,18 @@ $br-radius: 2em;
 //   gap: .8em;
 //   font-weight: bold;
 // }
+
+
+.card-value {
+  padding: 1em 1.3em;
+  text-align: center;
+  img {
+    width: fit-content;
+    margin-bottom: 1.8em;
+    width: 65%;
+    height: 10em;
+  }
+  h3 {
+    font-weight: bold;
+  }
+}
