--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -3,7 +3,7 @@
 
 // Define fonts for body and headers
 $body-font: 'Poppins', sans-serif;
-$headers-font: 'Sora', sans-serif;
+$headers-font: 'Poppins', sans-serif;
 
 // To use a font file (.woff) uncomment following lines
 // @font-face {
