--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,5 +1,4 @@
-<nav class="container nav-absolute d-flex align-items-center justify-content-between" style="background-color: white;
-  opacity: 0.9;">
+<nav class="container nav-absolute d-flex align-items-center justify-content-between">
   <%= link_to root_path do %>
    <h1 id='logo'>Beam</h1>
   <% end %>
