--- a/app/assets/stylesheets/components/_tabs.scss
+++ b/app/assets/stylesheets/components/_tabs.scss
@@ -1,4 +1,4 @@
-nav.stroke {
+nav {
   display: flex;
   flex-direction: row;
   overflow: scroll;
@@ -7,36 +7,8 @@ nav.stroke {
 
 }
 
-nav.stroke div {
-  position: relative;
-}
-
-nav.stroke div:after {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  margin: auto;
-  width: 0%;
-  content: '.';
-  color: transparent;
-  background: #aaa;
-  height: 1px;
-}
-nav.stroke div:hover:after {
-  width: 100%;
-}
-nav.stroke div:active:after {
-  width: 100%;
-}
-nav.stroke div:focus:after {
-  width: 100%;
-}
-
-
 nav.categories_tabs {
   background-color: transparent;
-  padding: 0px 1em;
 
   .tab {
     height: 4em;
@@ -55,12 +27,23 @@ nav.categories_tabs {
   }
   p {
     font-size: 12px;
+    margin-bottom: 0;
   }
-  i {
-    font-size: 24px;
+  .orange-text{
+    color: orange;
   }
 }
 
-.tab-container {
-  box-shadow: rgba(0, 0, 0, 0.45) 0px 15px 10px -15px;
+
+@media only screen and (min-width: 768px) {
+
+  nav.categories_tabs {
+    .tab {
+      height: 5em;
+    }
+    p {
+      font-size: 16px;
+      margin-bottom: 0;
+    }
+  }
 }
