--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -38,17 +38,19 @@
   .text-field{
     margin: 0 !important;
   }
+
 }
 
 .footer-btn {
-  -webkit-box-pack: center !important;
-  position: relative !important;
-  display: flex !important;
-  visibility: visible !important;
-  justify-content: center !important;
-  z-index: 8 !important;
-  white-space: nowrap !important;
-  transition: -ms-transform 0.2s ease-in-out 0s, -webkit-transform 0.2s ease-in-out 0s, transform 0.2s ease-in-out 0s, opacity 0.15s linear 0s, visibility 0s ease 0s !important;
-  margin-bottom: 24px !important;
-  opacity: 1 !important;
+  z-index: 999;
+  position: fixed;
+  bottom: 1em;
+  right: 0;
+  top: 90vh;
+  background-color: transparent;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
 }
