--- a/app/assets/stylesheets/components/_header.scss
+++ b/app/assets/stylesheets/components/_header.scss
@@ -39,15 +39,21 @@
     .header-title {
       font-size: 3.6em;
     }
-
-    p {
-      font-size: 1.8em;
-    }
-
     .search-container {
       width: 60%;
       margin: 0 auto;
     }
 
+  }
+
+  .value-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    .value-container_description {
+      font-size: 1.2em;
+      width: 60%;
+    }
   }
 }
